<resources>
    <string name="app_name">AndroidClasses</string>
    <string name="textView1">CHICKEN</string>
    <string name="textView2">EGG</string>

    <string name="button">PUSH</string>
    <string name="button_dz1">ДЗ1</string>
    <string name="button_dz2">ДЗ2</string>

    <string name="button_dz3">ДЗ3</string>
    <string name="buttonDz3_toFindImage">Посмотреть картинку</string>
    <string name="buttonDz3_toScreenDesign">Посмотреть экран логина</string>
    <string name="editText_URL_ofImage">Введите ссылку на картинку</string>
    <string name="button_uploadImage">Загрузить картинку</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="forgot_text"><u>Forgot your username/password?</u></string>

    <string name="button_dz4">ДЗ4</string>

    <string name="button_dz6">ДЗ6</string>
    <string name="buttonEditProfile">EDIT</string>
    <string name="buttonDeleteProfile">DELETE</string>
    <string name="buttonSaveProfile">SAVE</string>
    <string name="editTextPhotoUrl">Photo URL</string>
    <string name="editTextName">Name</string>
    <string name="editTextLastName">Last name</string>
    <string name="editTextSearch">Search</string>

    <string name="button_dz5">ДЗ5</string>
    <string name="textViewOnWifi">WIFI ON</string>
    <string name="textViewOffWifi">WIFI OFF</string>
</resources>