<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B7C6FD"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/button_dz1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="click"
        android:text="@string/button_dz1" />

    <Button
        android:id="@+id/button_dz2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="click"
        android:text="@string/button_dz2" />

    <Button
        android:id="@+id/button_dz3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="click"
        android:text="@string/button_dz3" />

    <Button
        android:id="@+id/button_dz4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="click"
        android:text="@string/button_dz4" />
</LinearLayout>