<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/login_logo" />

        <EditText
            android:id="@+id/login"
            style="@style/LoginEditText"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_login_name"
            android:hint="@string/username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            style="@style/LoginEditText"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_login_password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            style="@style/ButtonLogin"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_login_selector"
            android:text="@string/log_in" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/monda_regular"
            android:gravity="center"
            android:text="@string/forgot_text"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            style="@style/ButtonLogin"
            android:background="@drawable/button_createaccount_selector"
            android:text="@string/create_account" />
    </LinearLayout>
</FrameLayout>